--- a/src/app/modules/auth/change-password/change-password.component.html
+++ b/src/app/modules/auth/change-password/change-password.component.html
@@ -1,65 +1,61 @@
-<mat-card>
+<mat-card [ngClass]="{'width100':deviceXs,'width80':!deviceXs}">
     <mat-card-title>Change Password</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
-        <div class="container">
-            <div class="row">
-                <div class="column"><br>
-                    <img src="/assets/images/stpaulslogo.png" width="110px" alt="St Paul's Institute" />
-                </div>
-                <div class="column">
-                    <div class="col-md-12">
-
-                        <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm"
-                            novalidate>
-                            <div class="form-group">
-                                <label for="OldPassword">Old Password</label>
-                                <input type="password" class="form-control" name="OldPassword" autocomplete="Off"
-                                    [(ngModel)]="form.OldPassword" required #OldPassword="ngModel" />
-                                <div class="alert-danger" *ngIf="OldPassword.errors && f.submitted">
-                                    <div *ngIf="OldPassword.errors.required">Old password is required</div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="NewPassword">New Password</label>
-                                <input type="password" class="form-control" name="NewPassword"
-                                    [(ngModel)]="form.NewPassword" required minlength="6" #NewPassword="ngModel" />
-                                <div class="alert-danger" *ngIf="NewPassword.errors && f.submitted">
-                                    <div *ngIf="NewPassword.errors.required">New Password is required</div>
-                                    <div *ngIf="NewPassword.errors.minlength">
-                                        New Password must be at least 6 characters
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="ConfirmPassword">ConfirmPassword</label>
-                                <input type="password" class="form-control" autocomplete="Off" name="ConfirmPassword"
-                                    [(ngModel)]="form.ConfirmPassword" required minlength="3" maxlength="20"
-                                    #ConfirmPassword="ngModel" />
-                                <div class="alert-danger" *ngIf="ConfirmPassword.errors && f.submitted">
-                                    <div *ngIf="ConfirmPassword.errors.required">Confirm password is required</div>
-                                    <div *ngIf="ConfirmPassword!=NewPassword">
-                                        The password and confirm password do not match
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <button class="mat-raised-button" matTooltip="change">
-                                    <mat-icon>change_circle</mat-icon>   
-                                </button>
-                                <button (click)="gotohome()"  class="mat-raised-button" matTooltip="cancel">
-                                    <mat-icon>cancel</mat-icon>   
-                                </button>                               
-                            </div>
-                            <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
-                                Signup failed!<br />{{ errorMessage }}
-                            </div>
-                        </form>
-                        <div class="alert alert-success" *ngIf="isSuccessful">
-                            Change password successful!<br>
-                            <a [routerLink]="[ '/']"><mat-icon>home</mat-icon></a>
+        <div fxLayout="row" fxLayoutAlign="center start">
+            <div style="margin-right: 30px;">
+                <img *ngIf="!deviceXs" src="/assets/images/stpaulslogo.png" width="120px" alt="St Paul's Institute" />
+            </div>
+            <div>
+                <form *ngIf="!isSuccessful" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+                    <div class="form-group">
+                        <label for="OldPassword">Old Password</label>
+                        <input type="password" class="form-control" name="OldPassword" autocomplete="Off"
+                            [(ngModel)]="form.OldPassword" required #OldPassword="ngModel" />
+                        <div class="alert-danger" *ngIf="OldPassword.errors && f.submitted">
+                            <div *ngIf="OldPassword.errors.required">Old password is required</div>
                         </div>
                     </div>
+                    <div class="form-group">
+                        <label for="NewPassword">New Password</label>
+                        <input type="password" class="form-control" name="NewPassword" [(ngModel)]="form.NewPassword"
+                            required minlength="6" #NewPassword="ngModel" />
+                        <div class="alert-danger" *ngIf="NewPassword.errors && f.submitted">
+                            <div *ngIf="NewPassword.errors.required">New Password is required</div>
+                            <div *ngIf="NewPassword.errors.minlength">
+                                New Password must be at least 6 characters
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="ConfirmPassword">ConfirmPassword</label>
+                        <input type="password" class="form-control" autocomplete="Off" name="ConfirmPassword"
+                            [(ngModel)]="form.ConfirmPassword" required minlength="3" maxlength="20"
+                            #ConfirmPassword="ngModel" />
+                        <div class="alert-danger" *ngIf="ConfirmPassword.errors && f.submitted">
+                            <div *ngIf="ConfirmPassword.errors.required">Confirm password is required</div>
+                            <div *ngIf="ConfirmPassword!=NewPassword">
+                                The password and confirm password do not match
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <button class="mat-raised-button" matTooltip="change">
+                            <mat-icon>change_circle</mat-icon>
+                        </button>
+                        <button (click)="gotohome()" class="mat-raised-button" matTooltip="cancel">
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </div>
+                    <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+                        Signup failed!<br />{{ errorMessage }}
+                    </div>
+                </form>
+                <div class="alert alert-success" *ngIf="isSuccessful">
+                    Change password successful!<br>
+                    <a [routerLink]="[ '/']">
+                        <mat-icon>home</mat-icon>
+                    </a>
                 </div>
             </div>
         </div>
