--- a/src/app/modules/auth/change-password/change-password.component.scss
+++ b/src/app/modules/auth/change-password/change-password.component.scss
@@ -14,9 +14,12 @@ button{
 .column{
     margin-right: 15px;
 }
-mat-card{
-    margin-top: 100px;
-    width: 50%;
-  //  height:100vh;
-    //text-align: center;
+.mat-card{
+    top:110px; 
+}
+.width100{
+    width: 100%;
+}
+.width80{
+    width: 40%;
 }
