--- a/src/app/shared/components/header/header.component.scss
+++ b/src/app/shared/components/header/header.component.scss
@@ -50,10 +50,10 @@
 //     //opacity: 1.5;
 //     clip-path: polygon(0 30%, 99% 1%, 100% 90%, 0% 100%);
 //     }
-// button {
-//     border : none;
-//     outline: none;
-// }
+button {
+    border : none;
+    outline: none;
+}
 // .mat-icon {
 //     vertical-align: middle;
 //  }
