--- a/src/app/modules/FeesManagement/student/addstudent/addstudent.component.scss
+++ b/src/app/modules/FeesManagement/student/addstudent/addstudent.component.scss
@@ -6,7 +6,7 @@ mat-radio-button{
 }
 .radio{
     color:rgb(122, 121, 121);
-    width:20%;
+    //width:20%;
     border-collapse: collapse;
     border-radius: 5px;
     padding: 5px;
@@ -18,6 +18,10 @@ mat-radio-button{
     margin-bottom: 10px;
     
 }
-// button{
-//     margin: 20px;
-// }
+.demo-tab-group {
+    border: 1px solid #e8e8e8;
+  }
+  
+  .demo-tab-content {
+    padding: 16px;
+  }
