--- a/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
+++ b/src/app/modules/FeesManagement/student/dashboardstudent/dashboardstudent.component.html
@@ -1,68 +1,61 @@
 <mat-card>
-    <mat-card-title></mat-card-title>
+    <mat-card-title>Student Details</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
     <mat-card-content>
-        <form [formGroup]="searchForm">
-        <mat-form-field appearance="outline" fxFlex>
-            <mat-label>Name</mat-label>
-            <input formControlName="Name" autocomplete="Off" matInput
-            maxlength="50">
-        </mat-form-field>
-        <mat-form-field appearance="outline" fxFlex>
-            <mat-label>Father</mat-label>
-            <input formControlName="FatherName" autocomplete="Off" matInput
-            maxlength="50">
-        </mat-form-field>        
-        <mat-form-field appearance="outline" fxFlex>
-            <mat-label>Mother</mat-label>
-            <input formControlName="MotherName" autocomplete="Off" matInput
-            maxlength="50">
-        </mat-form-field>        
-        <button class="mat-raised-button" (click)="GetStudent()">
-            <mat-icon>search</mat-icon>
-        </button><br>
-    </form>
+        <form [formGroup]="searchForm" fxLayout="row" fxLayoutAlign="center center">
+            <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input formControlName="Name" autocomplete="Off" matInput maxlength="50">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Father</mat-label>
+                <input formControlName="FatherName" autocomplete="Off" matInput maxlength="50">
+            </mat-form-field>
+            <mat-form-field appearance="outline">
+                <mat-label>Mother</mat-label>
+                <input formControlName="MotherName" autocomplete="Off" matInput maxlength="50">
+            </mat-form-field>
+            <button class="mat-raised-button" (click)="GetStudent()">
+                <mat-icon>search</mat-icon>
+            </button>
+            <button class="mat-raised-button" (click)="new()">
+                <mat-icon>fiber_new</mat-icon>
+            </button>
+        </form>
         <div class="example-container mat-elevation-z8">
             <mat-table #table [dataSource]="dataSource">
-                
-                <!--- Note that these columns can be defined in any order.
-            The actual rendered columns are set as a property on the row definition" -->
-
-                <!-- Position Column -->
                 <ng-container matColumnDef="StudentId">
                     <mat-header-cell *matHeaderCellDef> Student Id </mat-header-cell>
                     <mat-cell *matCellDef="let element"> {{element.StudentId}} </mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="Name">
                     <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.Name}}
+                        {{element.Name}}
                     </mat-cell>
                 </ng-container>
-
                 <ng-container matColumnDef="FatherName">
                     <mat-header-cell *matHeaderCellDef>Father's Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.FatherName}}
+                        {{element.FatherName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MotherName">
                     <mat-header-cell *matHeaderCellDef>Mother's Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.MotherName}}
+                        {{element.MotherName}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="FatherContactNo">
                     <mat-header-cell *matHeaderCellDef>Father's Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.FatherContactNo}}
+                        {{element.FatherContactNo}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="MotherContactNo">
                     <mat-header-cell *matHeaderCellDef>Mother's Name </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                       {{element.MotherContactNo}}
+                        {{element.MotherContactNo}}
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Active">
@@ -73,9 +66,14 @@
                     </mat-cell>
                 </ng-container>
                 <ng-container matColumnDef="Action">
-                    <mat-header-cell *matHeaderCellDef>  </mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef> </mat-header-cell>
                     <mat-cell *matCellDef="let element">
-                        <button [(disabled)]="!element.Action" mat-fab (click)="view(element.StudentId)"><mat-icon>save</mat-icon></button>
+                        <button mat-fab (click)="fee(element.StudentId)">
+                            <mat-icon>view_list</mat-icon>
+                        </button>
+                        <button mat-fab (click)="view(element.StudentId)">
+                            <mat-icon>pageview</mat-icon>
+                        </button>
                     </mat-cell>
                 </ng-container>
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
@@ -83,7 +81,7 @@
             </mat-table>
         </div>
 
-<!-- 
+        <!-- 
         <mat-menu #menu="matMenu">
             <button mat-menu-item>Item 1</button>
             <button mat-menu-item>Item 2</button>
