--- a/src/app/modules/auth/home/home.component.html
+++ b/src/app/modules/auth/home/home.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<app-header [deviceXs]="deviceXs"></app-header>
 <div>
-    <header>
-      <router-outlet></router-outlet>
-    </header>    
-  </div>
+  <header>
+    <router-outlet></router-outlet>
+  </header>
+</div>
