--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,57 +1,52 @@
-<mat-card>
+<mat-card [ngClass]="{'width100':deviceXs,'width80':!deviceXs}">
     <mat-card-title>Login</mat-card-title>
     <mat-card-content>
         <br>
-        <div class="container">
-        <div class="row">
-            <div class="column">
-                <img src="/assets/images/stpaulslogo.png" width="120px" alt="St Paul's Institute" />
+        <div fxLayout="row" fxLayoutAlign="space-around start">
+            <div>
+                <img *ngIf="!deviceXs" src="/assets/images/stpaulslogo.png" width="120px" alt="St Paul's Institute" />
             </div>
-            <div class="column">
-                <div class="col-md-12">
-                    
-                        <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm"
-                            novalidate>
-                            <div class="form-group">
-                                <label for="username">Username</label>
-                                <input type="text" class="form-control" name="username" [(ngModel)]="form.username"
-                                    required #username="ngModel" autocomplete="Off" />
-                                <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">
-                                    Username is required!
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="password">Password</label>
-                                <input type="password" class="form-control" name="password" [(ngModel)]="form.password"
-                                    required minlength="6" #password="ngModel" />
-                                <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
-                                    <div *ngIf="password.errors.required">Password is required</div>
-                                    <div *ngIf="password.errors.minlength">
-                                        Password must be at least 6 characters
-                                    </div>
-                                </div>
-                            </div>
-                            <br>
-                            <div class="form-group">
-                                <button class="mat-raised-button" matTooltip="login">
-                                    <mat-icon>login</mat-icon>   
-                                </button>
-                                <button (click)="gotohome()" matTooltip="cancel"  class="mat-raised-button">
-                                    <mat-icon>cancel</mat-icon>   
-                                </button>
-                            </div>
-                            <div class="form-group">
-                                <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
-                                    Login failed: {{ errorMessage }}
-                                </div>
-                            </div>
-                        </form>
+            <div>
+                <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required
+                            #username="ngModel" autocomplete="Off" />
+                        <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted">
+                            Username is required!
+                        </div>
                     </div>
-                </div>
-                <div class="alert alert-success col-md-12" *ngIf="isLoggedIn">
-                    Logged in as {{ username }}.
-                </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required
+                            minlength="6" #password="ngModel" />
+                        <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted">
+                            <div *ngIf="password.errors.required">Password is required</div>
+                            <div *ngIf="password.errors.minlength">
+                                Password must be at least 6 characters
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div fxLayoutAlign="space-around center">
+                        <button class="mat-raised-button" matTooltip="login">
+                            <mat-icon>login</mat-icon>
+                        </button>
+                        <button (click)="gotohome()" matTooltip="cancel" class="mat-raised-button">
+                            <mat-icon>cancel</mat-icon>
+                        </button>
+                    </div>
+                    <div class="form-group">
+                        <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
+                            Login failed: {{ errorMessage }}
+                        </div>
+                    </div>
+                </form>
             </div>
         </div>
+        <div class="alert alert-success col-md-12" *ngIf="isLoggedIn">
+            Logged in as {{ username }}.
+        </div>
+
     </mat-card-content>
 </mat-card>
