--- a/src/app/modules/auth/login/login.component.scss
+++ b/src/app/modules/auth/login/login.component.scss
@@ -4,17 +4,22 @@
     
 }
 .container{
-    display: flex;
-    justify-content: center;
+    display:flex;
+    //justify-content: center;
     //margin-top: 150px;
 }
 button{
-    margin-right: 25px;
+    margin-right: 15px;
 }
 .column{
     margin-right: 15px;
 }
 .mat-card{
-    top:100px;
-    width: 50%;
+    top:100px; 
+}
+.width100{
+    width: 100%;
+}
+.width80{
+    width: 40%;
 }
